--- a/includes/partials/options-features.twig
+++ b/includes/partials/options-features.twig
@@ -87,7 +87,7 @@
                     'header': 'Buy link UI',
                     'label': set.buy_label,
                     'image': set.buy_image,
-                    'type': set.buy_type,
+                    'type': set.buy_type is empty ? default.buy_type : set.buy_type,
                     'default_label': default.buy_label,
                     'default_image': defaults.buy_image,
                 }) }}
@@ -111,7 +111,7 @@
                     'header': 'Specimen link UI',
                     'label': set.specimen_label,
                     'image': set.specimen_image,
-                    'type': set.specimen_type,
+                    'type': set.specimen_type is empty ? default.specimen_type : set.specimen_type,
                     'default_label': default.specimen_label,
                     'default_image': defaults.specimen_image,
                 }) }}
