--- a/admin/css/admin-options.less
+++ b/admin/css/admin-options.less
@@ -235,16 +235,18 @@
     .fontsampler-setting-image {
         .fontsampler-upload-wrapper {
             display: inline-block;
+        }
 
-            .custom-img-container {
+        .custom-image-container {
+            display: block;
+            max-width: 100px;
+            max-height: 30px;
+            position: relative;
+
+            img {
+                display: block;
                 max-width: 100%;
-                max-height: 30px;
-                position: relative;
-
-                img {
-                    display: block;
-                    max-height: 30px;
-                }
+                max-height: 100%;
             }
         }
     }
