--- a/admin/css/fontsampler-admin.css
+++ b/admin/css/fontsampler-admin.css
@@ -501,14 +501,16 @@
 #fontsampler-admin .fontsampler-setting-image .fontsampler-upload-wrapper {
   display: inline-block;
 }
-#fontsampler-admin .fontsampler-setting-image .fontsampler-upload-wrapper .custom-img-container {
-  max-width: 100%;
+#fontsampler-admin .fontsampler-setting-image .custom-image-container {
+  display: block;
+  max-width: 100px;
   max-height: 30px;
   position: relative;
 }
-#fontsampler-admin .fontsampler-setting-image .fontsampler-upload-wrapper .custom-img-container img {
+#fontsampler-admin .fontsampler-setting-image .custom-image-container img {
   display: block;
-  max-height: 30px;
+  max-width: 100%;
+  max-height: 100%;
 }
 #fontsampler-admin .fontsampler-admin-alignment-icon {
   border: 1px solid #ccc;
