fixed small bug counting empty notifications as 1 notification

--- a/includes/set-delete.twig
+++ b/includes/set-delete.twig
@@ -13,7 +13,7 @@
 		<input type="hidden" name="id" value="{{ set.id }}">
 
 		{{ submit_button('Yes, delete Fontsampler', 'delete') }}
-		<small>And fontsets used in this Fontsampler will remain available.</small>
+		<small>Any fontsets used in this Fontsampler will remain available.</small>
 	</form>
 	<p><a href="?page=fontsampler">Back without deleting.</a></p>
 {% endif %}
