updated readme and about

--- a/includes/about.twig
+++ b/includes/about.twig
@@ -1,48 +1,61 @@
 {% extends('layout.twig') %}
 
 {% block content %}
-<h1>Font sampler</h1>
-<h2>Created by</h2>
-<p>The Fontsampler Wordpress plugin is brought to you by digital designer, developer and type enthusiast <a
-		href="http://johannesneumeier.com">Johannes Neumeier</a>.</p>
+    <h1>Font sampler</h1>
+    <h2>Created by</h2>
+    <p>The Fontsampler Wordpress plugin is brought to you by digital designer, developer and type enthusiast <a
+                href="http://johannesneumeier.com">Johannes Neumeier</a>.</p>
 
-<h2>Feedback</h2>
-<p>Your feedback is always welcome. Feel free to send comments, bug reports and feature requests. <a
-		href="mailto:hello@johannesneumeier.com">Email me</a> or
-	<a href="https://github.com/kontur/fontsampler-wordpress-plugin/issues">open an issue on github</a>!
+    <h2>Feedback</h2>
+    <p>Your feedback is always welcome. Feel free to send comments, bug reports and feature requests. <a
+                href="mailto:hello@johannesneumeier.com">Email me</a> or
+        <a href="https://github.com/kontur/fontsampler-wordpress-plugin/issues">open an issue on github</a>!
 
-<h2>Supported by</h2>
-<p>The following people have supported the development of this plugin through their generous donations:</p>
-<ul class="real-list">
-	<li><strong><a href="http://dunwichtype.com/">James Puckett</a></strong></li>
-	<li><strong>George Thomas</strong></li>
-	<li><strong><a href="https://paulogoode.com">Paulo Goode</a></strong></li>
-	<li><strong><a href="http://quadrat.com">David Vereschagin</a></strong></li>
-</ul>
+    <h2>Supported by</h2>
+    <p>The following people have supported the development of this plugin through their generous donations:</p>
+    <ul class="real-list">
+        <li><strong><a href="http://dunwichtype.com/">James Puckett</a></strong></li>
+        <li><strong>George Thomas</strong></li>
+        <li><strong><a href="https://paulogoode.com">Paulo Goode</a></strong></li>
+        <li><strong><a href="http://quadrat.com">David Vereschagin</a></strong></li>
+        <li><a href="http://setsailstudios.com/">Sam Parrett</a></li>
+        <li><a href="http://www.phitradesign-fonts.com/">Philip Trautmann</a></li>
+    </ul>
+    <p>For code contributions to the repository my thanks to:</p>
+    <ul class="real-list">
+        <li><a href="https://drawcard.com.au/">Chris Drabsch</a></li>
+    </ul>
 
-<h2>License information</h2>
+    <h2>License information</h2>
 
-<p>This code is distributed under the GNU General Public License v3.0.</p>
-<p><a href="https://github.com/kontur/fontsampler-wordpress-plugin/blob/master/LICENSE.txt">See license</a></p>
-<p><a href="http://choosealicense.com/licenses/gpl-3.0/#">Read a simplified version of what this license means</a></p>
-<p>&copy; 2016 Johannes Neumeier</p>
-<br>
-<p>This plugin uses the following libraries for rendering interface components:</p>
-<ul class="real-list">
-	<li><a href="https://github.com/graphicore/specimenTools">specimenTools</a> (<a
-			href="https://github.com/graphicore/specimenTools/blob/master/LICENSE">License</a>)
-	</li>
-	<li><a href="http://selectric.js.org/">selectric.js for custom dropdowns</a> (<a
-			href="https://github.com/lcdsantos/jQuery-Selectric/blob/master/LICENSE">License</a>)
-	</li>
-	<li><a href="http://rangeslider.js.org/">rangeslider.js for custom range sliders</a> (<a
-			href="https://github.com/andreruffert/rangeslider.js/blob/develop/LICENSE.md">License</a>)
-	</li>
-	<li><a href="http://www.formvalidator.net/">jQuery Form Validator</a> (<a
-			href="http://www.formvalidator.net/#license">License</a>)
-	</li>
-	<li><a href="https://github.com/kontur/jquery-fontsampler">jquery-fontsampler (also developed by the plugin
-			author)</a> (<a href="https://github.com/kontur/jquery-fontsampler/blob/master/LICENSE.txt">License</a>)
-	</li>
-</ul>
+    <p>This code is distributed under the GNU General Public License v3.0.</p>
+    <p><a href="https://github.com/kontur/fontsampler-wordpress-plugin/blob/master/LICENSE.txt">See license</a></p>
+    <p><a href="http://choosealicense.com/licenses/gpl-3.0/#">Read a simplified version of what this license means</a>
+    </p>
+    <p>&copy; 2016 - 2017 Johannes Neumeier</p>
+    <br>
+    <p>This plugin uses the included open source libraries and projects under the hood, some of which are listed here:</p>
+    <ul class="real-list">
+        <li><a href="https://github.com/graphicore/specimenTools">specimenTools</a> (<a
+                    href="https://github.com/graphicore/specimenTools/blob/master/LICENSE">License</a>)
+        </li>
+        <li><a href="https://github.com/nodebox/opentype.js/">Opentype.js</a> (<a
+                    href="https://github.com/nodebox/opentype.js/blob/master/LICENSE">License</a>)
+        </li>
+        <li><a href="https://github.com/twigphp/Twig">Twig</a> (<a
+                    href="https://github.com/twigphp/Twig/blob/2.x/LICENSE">License</a>)
+        </li>
+        <li><a href="http://selectric.js.org/">selectric.js for custom dropdowns</a> (<a
+                    href="https://github.com/lcdsantos/jQuery-Selectric/blob/master/LICENSE">License</a>)
+        </li>
+        <li><a href="http://rangeslider.js.org/">rangeslider.js for custom range sliders</a> (<a
+                    href="https://github.com/andreruffert/rangeslider.js/blob/develop/LICENSE.md">License</a>)
+        </li>
+        <li><a href="http://www.formvalidator.net/">jQuery Form Validator</a> (<a
+                    href="http://www.formvalidator.net/#license">License</a>)
+        </li>
+        <li><a href="https://github.com/kontur/jquery-fontsampler">jquery-fontsampler (also developed by the plugin
+                author)</a> (<a href="https://github.com/kontur/jquery-fontsampler/blob/master/LICENSE.txt">License</a>)
+        </li>
+    </ul>
 {% endblock %}
