refactored notification showing; various db migration fixes for 0.2.0

--- a/includes/layout.twig
+++ b/includes/layout.twig
@@ -1,3 +1,8 @@
+{% if has_messages() %}
+    <header class="notice">
+        {{ get_messages()|raw }}
+    </header>
+{% endif %}
 
 <header id="fontsampler-menu">
     {% include 'header.twig'  %}
