--- a/includes/partials/options-basic.twig
+++ b/includes/partials/options-basic.twig
@@ -14,7 +14,7 @@
     <span>The initial text displayed in the font sampler, for example the font name or pangram. You can use multi-line text here as well.</span><br>
     <textarea name="initial" rows="5"
               dir="{% if set.is_ltr == 1 %}ltr{% else %}rtl{% endif %}"
-              style="text-align: {{ set.alignment_initial }};"
+              style="text-align: {{ set.alignment_initial is not empty ? set.alignment_initial : defaults.alignment_initial }};"
     >{% if set.initial is not empty %}{{ set.initial }}{% endif %}</textarea>
 </label>
 
@@ -24,7 +24,7 @@
     <div>
         <label>
             <div class="fontsampler-image-radio {% if set.alignment_initial == 'left' %} active {% endif %}">
-                <input type="radio" name="alignment_initial" value="left"
+                <input type="radio" name="alignment_initial" data-value="left" value="left"
                         {% if set.alignment_initial == 'left' %} checked="checked" {% endif %}>
                 <img class="fontsampler-admin-alignment-icon"
                      src="{{ image('icons/align-left.svg') }}">Left
@@ -32,7 +32,7 @@
         </label>
         <label>
             <div class="fontsampler-image-radio {% if set.alignment_initial == 'center' %} active {% endif %}">
-                <input type="radio" name="alignment_initial" value="center"
+                <input type="radio" name="alignment_initial" data-value="center" value="center"
                         {% if set.alignment_initial == 'center' %} checked="checked" {% endif %}>
                 <img class="fontsampler-admin-alignment-icon"
                      src="{{ image('icons/align-center.svg') }}">Centered
@@ -40,19 +40,21 @@
         </label>
         <label>
             <div class="fontsampler-image-radio {% if set.alignment_initial == 'right' %} active {% endif %}">
-                <input type="radio" name="alignment_initial" value="right"
+                <input type="radio" name="alignment_initial" data-value="right" value="right"
                         {% if set.alignment_initial == 'right' %} checked="checked" {% endif %}>
                 <img class="fontsampler-admin-alignment-icon"
                      src="{{ image('icons/align-right.svg') }}">Right
             </div>
         </label>
+        {% if settings is empty %}
         <label>
             <div class="fontsampler-image-radio {% if set.alignment_initial is empty %} active {% endif %}">
-                <input type="radio" name="alignment_initial" value="{{ defaults.alignment_initial }}"
+                <input type="radio" name="alignment_initial" data-value="{{ defaults.alignment_initial }}" value="default"
                         {% if set.alignment_initial is empty %} checked="checked" {% endif %}>
                 <img class="fontsampler-admin-alignment-icon"
                      src="{{ image('icons/align-' ~ defaults.alignment_initial ~ '.svg') }}">Use default ({{ defaults.alignment_initial }})
             </div>
         </label>
+        {% endif %}
     </div>
 </div>
