minor fixes to pre 0.2.0 ui_order syntax conversion

--- a/css/fontsampler-css.less
+++ b/css/fontsampler-css.less
@@ -1,6 +1,12 @@
 @import "fontsampler-custom-selectric.less";
 @import "fontsampler-custom-rangeslider.less";
 
+.fontsampler-warning {
+    background: #C0402F;
+    color: white;
+    padding: 1em;
+}
+
 .fontsampler-wrapper {
 
     &.on-loading {
