implements #79 option to reset settings to defaults

--- a/admin/css/admin-settings.less
+++ b/admin/css/admin-settings.less
@@ -36,4 +36,16 @@
             width: 15em;
         }
     }
+
+    // reset button / form at the top of the settings page
+    .fontsampler-settings-reset {
+        display: inline-block;
+        float: right;
+        position: relative;
+        top: -3em;
+
+        p {
+            margin: 0;
+        }
+    }
 }
