fixed ui order bug due to underscore separate field names

--- a/includes/partials/options-features.twig
+++ b/includes/partials/options-features.twig
@@ -87,8 +87,8 @@
                     'header': 'Buy link UI',
                     'label': set.buy_label,
                     'image': set.buy_image,
-                    'type': set.buy_type is empty ? default.buy_type : set.buy_type,
-                    'default_label': default.buy_label,
+                    'type': set.buy_type is empty ? defaults.buy_type : set.buy_type,
+                    'default_label': defaults.buy_label,
                     'default_image': defaults.buy_image,
                 }) }}
             </div>
@@ -111,8 +111,8 @@
                     'header': 'Specimen link UI',
                     'label': set.specimen_label,
                     'image': set.specimen_image,
-                    'type': set.specimen_type is empty ? default.specimen_type : set.specimen_type,
-                    'default_label': default.specimen_label,
+                    'type': set.specimen_type is empty ? defaults.specimen_type : set.specimen_type,
+                    'default_label': defaults.specimen_label,
                     'default_image': defaults.specimen_image,
                 }) }}
             </div>
