--- a/includes/partials/options-features-link.twig
+++ b/includes/partials/options-features-link.twig
@@ -30,9 +30,9 @@
                 <input type="radio" name="{{ name }}_type" value="label_default"
                     {% if type == 'label' and label is empty %} checked="checked" {% endif %}>
                 <span class="settings-description">Use default label for "{{ name }}" link:</span><br>
-                <span class="fontsampler-default-value">{{ defaults_label }}</span>
+                <span class="fontsampler-default-value">{{ default_label }}</span>
                 <input type="hidden" name="{{ name }}_label" class="fontsampler-admin-slider-label"
-                       value="{{ defaults_label }}"/>
+                       value="{{ default_label }}"/>
             </label>
         {% else %}
             <label class="fontsampler-label-disabled">
