small fixes to db migration for 0.2.0

--- a/includes/about.twig
+++ b/includes/about.twig
@@ -54,6 +54,9 @@
         <li><a href="http://www.formvalidator.net/">jQuery Form Validator</a> (<a
                     href="http://www.formvalidator.net/#license">License</a>)
         </li>
+        <li><a href="https://github.com/zenorocha/clipboard.js/">Clipboard.js</a> (<a
+                    href="https://zenorocha.mit-license.org/">License</a>)
+        </li>
         <li><a href="https://github.com/kontur/jquery-fontsampler">jquery-fontsampler (also developed by the plugin
                 author)</a> (<a href="https://github.com/kontur/jquery-fontsampler/blob/master/LICENSE.txt">License</a>)
         </li>
