--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -91,6 +91,10 @@
         margin: -1em auto 0;
         border: 4px solid @fs_color_light;
         padding: 4px;
+
+        &.fontsampler-fontset-files {
+            margin: 0 auto;
+        }
     }
 
     th, td {
