--- a/admin/css/fontsampler-admin.css
+++ b/admin/css/fontsampler-admin.css
@@ -818,7 +818,7 @@
   border: 2px solid #64CAF0;
 }
 #fontsampler-admin fieldset {
-  border: 1px solid #ccc;
+  border: 4px solid #F2F2F2;
   padding: 1em;
 }
 #fontsampler-admin fieldset.no-padding {
@@ -1114,4 +1114,10 @@
   position: absolute;
   left: -1em;
   top: 0;
+}
+#fontsampler-admin fieldset.fontsampler-fix-default-settings li {
+  margin: 1em 0;
+}
+#fontsampler-admin fieldset.fontsampler-fix-default-settings .submit {
+  margin: 0;
 }
