refactored fontset file handling to use wp.media in admin frontend, implements #87, fixes #57, also prepares #47 & #46 since now the loading of fonts is within inline upload callback

--- a/admin/css/admin-sampler.less
+++ b/admin/css/admin-sampler.less
@@ -1,7 +1,22 @@
+@import "admin-variables.less";
+
 #fontsampler-admin {
 
-    #fontsampler-fontset-list li select {
-        width: 22.25em;
+    #fontsampler-fontset-list {
+
+        .fontsampler-font-set {
+            background: @fs_color_light;
+            padding: 0.5em;
+
+            .fontsampler-fonts-table {
+                background: @fs_color_white;
+                margin-top: 1em;
+            }
+        }
+
+        li select {
+            width: 22.25em;
+        }
     }
 
     .fontsampler-fontset-inline {
