wip fontfilename on uplaod

--- a/includes/fontset-fonts.twig
+++ b/includes/fontset-fonts.twig
@@ -29,6 +29,8 @@
 					</span></div>
                     <input type="hidden" class="fontsampler-font-id" name="{{ format }}[]"
                            value="{{ font[format ~ '_id'] }}">
+
+                    <div class="fontsampler-font-upload-preview"></div>
                 </td>
                 <td>
                     <p class="button add fontsampler-upload-font">
