fixed regenerating CSS on reset, admin sliders, saving non-null fields

--- a/includes/partials/options-features-slider.twig
+++ b/includes/partials/options-features-slider.twig
@@ -14,7 +14,10 @@
         {{ include ('partials/slider.twig', {
             label: slider_label,
             name: slider_name,
-            value: slider_default
+            value: slider_default,
+            min: slider_min,
+            max: slider_max,
+            group: slider_group
         }) }}
     </div>
 {% endblock %}
