--- a/includes/partials/options-features.twig
+++ b/includes/partials/options-features.twig
@@ -27,7 +27,10 @@
                 label: (label ~ '_min'),
                 slider_label: f.slider_min_label,
                 slider_name: (f.name ~ '_min'),
-                slider_default: (defaults[f.name ~ '_min'])
+                slider_default: (defaults[f.name ~ '_min']),
+                slider_min: slider_ranges[f.name][0],
+                slider_max: slider_ranges[f.name][1],
+                slider_group: f.name
             }) }}
 
             {{ include('partials/options-features-slider.twig', {
@@ -36,7 +39,10 @@
                 label: (label ~ '_initial'),
                 slider_label: f.slider_initial_label,
                 slider_name: (f.name ~ '_initial'),
-                slider_default: (defaults[f.name ~ '_initial'])
+                slider_default: (defaults[f.name ~ '_initial']),
+                slider_min: slider_ranges[f.name][0],
+                slider_max: slider_ranges[f.name][1],
+                slider_group: f.name
             }) }}
 
             {{ include('partials/options-features-slider.twig', {
@@ -45,7 +51,10 @@
                 label: (label ~ '_max'),
                 slider_label: f.slider_max_label,
                 slider_name: (f.name ~ '_max'),
-                slider_default: (defaults[f.name ~ '_max'])
+                slider_default: (defaults[f.name ~ '_max']),
+                slider_min: slider_ranges[f.name][0],
+                slider_max: slider_ranges[f.name][1],
+                slider_group: f.name
             }) }}
         </div>
     </div>
